Created tribes directory page in official order

--- a/tribes.html
+++ b/tribes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tribes | AmericanTribes.org</title>
+    <title>The Tribes | AmericanTribes.org</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -20,19 +20,19 @@
     </header>
 
     <main>
-        <h2>The Twelve Tribes</h2>
+        <h2>The Twelve Nations</h2>
         <ul>
-            <li>Dixie</li>
-            <li>South Florida</li>
-            <li>Texas</li>
-            <li>California</li>
+            <li>New England</li>
+            <li>Greater New York City</li>
+            <li>Great Lakes</li>
             <li>Appalachia</li>
-            <li>Yankeedom</li>
-            <li>Great Lakes Tribe</li>
-            <li>New Netherland</li>
-            <li>El Norte</li>
-            <li>The Left Coast</li>
-            <li>The Far West</li>
+            <li>Dixieland</li>
+            <li>South Florida</li>
+            <li>Greater Texas</li>
+            <li>The Great Plains</li>
+            <li>Deseret</li>
+            <li>California</li>
+            <li>The Northwest</li>
             <li>Alaska</li>
         </ul>
     </main>
@@ -40,6 +40,7 @@
     <footer>
         <p>&copy; 2025 AmericanTribes.org</p>
     </footer>
+
 </body>
 
 </html>
