--- a/tribes.html
+++ b/tribes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Tribes | AmericanTribes.org</title>
+    <title>The Twelve Nations | AmericanTribes.org</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -22,18 +22,18 @@
     <main>
         <h2>The Twelve Nations</h2>
         <ul>
-            <li>New England</li>
-            <li>Greater New York City</li>
-            <li>Great Lakes</li>
-            <li>Appalachia</li>
-            <li>Dixieland</li>
-            <li>South Florida</li>
-            <li>Greater Texas</li>
-            <li>The Great Plains</li>
-            <li>Deseret</li>
-            <li>California</li>
-            <li>The Northwest</li>
-            <li>Alaska</li>
+            <li><strong>New England</strong>: Maine, New Hampshire, Vermont, Massachusetts, Rhode Island, Connecticut</li>
+            <li><strong>Greater New York City</strong>: New York City metro, Long Island, Northern & Southern New Jersey, Delaware, Maryland</li>
+            <li><strong>Great Lakes</strong>: Western Pennsylvania, Ohio, Indiana, Illinois, Michigan, Wisconsin, Minnesota, Northern Missouri, Iowa</li>
+            <li><strong>Appalachia</strong>: West Virginia, Eastern Kentucky, Eastern Tennessee, Western Virginia, Ozarks (Southern Missouri & Northern Arkansas)</li>
+            <li><strong>Dixieland</strong>: Virginia (east), North Carolina, South Carolina, Georgia, Alabama, Mississippi, Louisiana, Arkansas (south), Tennessee (west), Kentucky (west), Southern Missouri, Florida Panhandle, Northern Florida</li>
+            <li><strong>South Florida</strong>: Everything south of the Orlando-Tampa line</li>
+            <li><strong>Greater Texas</strong>: Texas, Western Oklahoma, Eastern New Mexico</li>
+            <li><strong>The Great Plains</strong>: Nebraska, Kansas, Oklahoma (non-Texan parts), North Dakota, South Dakota, Eastern Montana, Eastern Wyoming, Idaho</li>
+            <li><strong>Deseret</strong>: Utah, Nevada, Arizona, New Mexico (north), Western Colorado, Eastern California (desert regions)</li>
+            <li><strong>California</strong>: Coastal & Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin)</li>
+            <li><strong>The Northwest</strong>: Oregon, Washington, Western Montana</li>
+            <li><strong>Alaska</strong>: Entire state of Alaska</li>
         </ul>
     </main>
 
