Finalized tribes page with updated regional assignments

--- a/tribes.html
+++ b/tribes.html
@@ -23,17 +23,17 @@
         <h2>The Twelve Nations</h2>
         <ul>
             <li><strong>New England</strong>: Maine, New Hampshire, Vermont, Massachusetts, Rhode Island, Connecticut</li>
-            <li><strong>Greater New York City</strong>: New York City metro, Long Island, Northern & Southern New Jersey, Delaware, Maryland</li>
-            <li><strong>Great Lakes</strong>: Western Pennsylvania, Ohio, Indiana, Illinois, Michigan, Wisconsin, Minnesota, Northern Missouri, Iowa</li>
-            <li><strong>Appalachia</strong>: West Virginia, Eastern Kentucky, Eastern Tennessee, Western Virginia, Ozarks (Southern Missouri & Northern Arkansas)</li>
-            <li><strong>Dixieland</strong>: Virginia (east), North Carolina, South Carolina, Georgia, Alabama, Mississippi, Louisiana, Arkansas (south), Tennessee (west), Kentucky (west), Southern Missouri, Florida Panhandle, Northern Florida</li>
-            <li><strong>South Florida</strong>: Everything south of the Orlando-Tampa line</li>
-            <li><strong>Greater Texas</strong>: Texas, Western Oklahoma, Eastern New Mexico</li>
-            <li><strong>The Great Plains</strong>: Nebraska, Kansas, Oklahoma (non-Texan parts), North Dakota, South Dakota, Eastern Montana, Eastern Wyoming, Idaho</li>
-            <li><strong>Deseret</strong>: Utah, Nevada, Arizona, New Mexico (north), Western Colorado, Eastern California (desert regions)</li>
-            <li><strong>California</strong>: Coastal & Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin)</li>
+            <li><strong>Greater New York City</strong>: New York City metro, Long Island, New Jersey, Delaware, Maryland, Philadelphia</li>
+            <li><strong>Great Lakes</strong>: Western Pennsylvania, Ohio, Indiana, Illinois, Michigan, Wisconsin, Minnesota, Northern Missouri (except Kansas City and St. Louis), Iowa</li>
+            <li><strong>Appalachia</strong>: West Virginia, Eastern Kentucky, Eastern Tennessee, Western Virginia</li>
+            <li><strong>Dixieland</strong>: Virginia, North Carolina, South Carolina, Georgia, Alabama, Mississippi, Louisiana, Arkansas, Tennessee (west), Kentucky (west), Southern Missouri, Florida Panhandle, Northern Florida, Kansas City, St. Louis</li>
+            <li><strong>South Florida</strong>: Florida south of the Orlando-Tampa line</li>
+            <li><strong>Greater Texas</strong>: Texas, Oklahoma</li>
+            <li><strong>The Great Plains</strong>: Nebraska, Kansas, North Dakota, South Dakota, Eastern Montana, Eastern Wyoming, Idaho</li>
+            <li><strong>Deseret</strong>: Utah, Nevada, Arizona, New Mexico, Western Colorado, Eastern California (desert regions)</li>
+            <li><strong>California</strong>: Coastal and Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin)</li>
             <li><strong>The Northwest</strong>: Oregon, Washington, Western Montana</li>
-            <li><strong>Alaska</strong>: Entire state of Alaska</li>
+            <li><strong>Alaska</strong>: Alaska</li>
         </ul>
     </main>
 
