--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <h1>AmericanTribes.org</h1>
-        <p>A Confederation of the Twelve Nations</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="manifesto.html">Manifesto</a>
-            <a href="tribes.html">Tribes</a>
-        </nav>
-    </header>
+  <header>
+    <img src="assets/images/tribes_logo.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
+    <h1>AmericanTribes.org</h1>
+    <p>A Confederation of the Twelve Nations</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="manifesto.html">Manifesto</a>
+        <a href="tribes.html">Tribes</a>
+    </nav>
+</header>
+
 
     <main>
         <section>
