Added manifesto introduction draft

--- a/manifesto.html
+++ b/manifesto.html
@@ -21,12 +21,23 @@
 
     <main>
         <h2>Manifesto</h2>
-        <p>Coming soon: The founding covenant, the call to renewal, the story of the Twelve Nations.</p>
+
+        <p>From its earliest days, America was never a single nation. The land was settled by distinct groups, each with its own folk, customs, and faith. As David Hackett Fischer demonstrated in <em>Albion's Seed</em>, the colonies were planted by separate ethnocultural groups, each bringing its own way of life.</p>
+
+        <p>With westward expansion, these regional cultures did not dissolve, they multiplied. The original colonial hearths were carried inland, adapted to the rivers, mountains, plains, and deserts. What began as four became twelve, as the cultures of the coast were reborn and refashioned beyond the Appalachians, across the Mississippi, and into the far West. These twelve nations, each with its own spirit, persist even now beneath the imposed illusion of a monolithic national unity.</p>
+
+        <p>The earliest settlers saw their colonies not as mere governments, but as sacred communities. They believed they were founding a new Israel, a nation chosen by Providence to build a Christian society. America was to be a Christian country, not by empty slogans, but by the lived law and custom of its inhabitants.</p>
+
+        <p>But in time, this vision was overthrown. The so-called Founding Fathers, disciples of the Enlightenment, crafted a machine in the shape of a republic. They denied the organic life of the tribes and replaced it with a secular and universalist ideology. The result was predictable: rootlessness, mass centralization, and the slow dissolution of the folkways that made America alive.</p>
+
+        <p>We reject this. We call for the reconstitution of America, not as an empire, not as an abstraction, but as a confederation of the Twelve Nations. Let each people return to its own, live according to its own customs, and renew the covenant of their fathers.</p>
+
     </main>
 
     <footer>
         <p>&copy; 2025 AmericanTribes.org</p>
     </footer>
+
 </body>
 
 </html>
