--- a/manifesto.html
+++ b/manifesto.html
@@ -32,6 +32,22 @@
 
         <p>We reject this. We call for the reconstitution of America, not as an empire, not as an abstraction, but as a confederation of the Twelve Nations. Let each people return to its own, live according to its own customs, and renew the covenant of their fathers.</p>
 
+        <h3>Unity and the Organic Order</h3>
+
+        <p>The solution is not to abolish unity, but to restore it to its rightful form. True unity has always arisen naturally when built on covenant and necessity. Ancient Israel stood as twelve distinct tribes, yet one people, bound not by force or bureaucracy, but by faith, common defense, and kinship. It is this example we follow.</p>
+
+        <p>The Twelve Nations of America endure because they are organic. They were not the invention of committees or constitutions, but the fruit of kinship, faith, and land. They arose as all true nations do, not by theory, but by life itself. Rivers marked their borders. Churches marked their hearts. Languages, accents, and folkways marked their souls. Their unity, rightly ordered, does not abolish their differences, but preserves them.</p>
+
+        <p>There are matters which belong properly to all: coinage, trade, foreign diplomacy, national defense, and common infrastructure. Just as ancient Israel came together for the defense of the land and the keeping of the sacred law, so too should the American tribes join in covenant for the few things that are necessary for all. Rivers must be maintained, borders secured, and honest measures kept.</p>
+
+        <p>Yet outside these few and necessary things, the tribes must be free. No tribe has the right to impose its will, its customs, or its theories of government upon another. One may keep kings, another councils. One may uphold the old faith, another may falter. One may hold to the traditions of its fathers, while another may choose otherwise. The political form, the public faith, the ordering of families and communities, even the very structure of governance, belong to the tribes alone.</p>
+
+        <p>The sin of modern America is not unity itself, but a false and violent unity which seeks to make all things the same. The United States is not a nation, but a machine, constructed by ideologues who mistook slogans for law and theory for life. Its constitution is not the fruit of a people, but the abstract design of Enlightenment minds who sought to replace hearth and home with the empty notions of liberty and equality. The result is not a nation, but a system.</p>
+
+        <p>Organic nations suffer, war, struggle, and heal. They endure because they are real. Inorganic systems persist only so long as their machinery functions. Once the gears begin to fail, as they are failing now, the machine collapses into rust and dust. Yet the tribes, though scattered and confused, still live. Their life is rooted, while the empire that rules them is rootless.</p>
+
+        <p>The cure is not anarchy, nor conquest, but covenant. Twelve free nations, bound together not by ideology, but by kinship, necessity, and peace.</p>
+
     </main>
 
     <footer>
