Added False Foundation section to manifesto

--- a/manifesto.html
+++ b/manifesto.html
@@ -28,7 +28,7 @@
 
         <p>The earliest settlers saw their colonies not as mere governments, but as sacred communities. They believed they were founding a new Israel, a nation chosen by Providence to build a Christian society. America was to be a Christian country, not by empty slogans, but by the lived law and custom of its inhabitants.</p>
 
-        <p>But in time, this vision was overthrown. The so-called Founding Fathers, disciples of the Enlightenment, crafted a machine in the shape of a republic. They denied the organic life of the tribes and replaced it with a secular and universalist ideology. The result was predictable: rootlessness, mass centralization, and the slow dissolution of the folkways that made America alive.</p>
+        <p>But in time, this vision was overthrown. The Founding Fathers, disciples of the Enlightenment, crafted a machine in the shape of a republic. They denied the organic life of the tribes and replaced it with a secular and universalist ideology. The result was predictable: rootlessness, mass centralization, and the slow dissolution of the folkways that made America alive.</p>
 
         <p>We reject this. We call for the reconstitution of America, not as an empire, not as an abstraction, but as a confederation of the Twelve Nations. Let each people return to its own, live according to its own customs, and renew the covenant of their fathers.</p>
 
@@ -42,11 +42,17 @@
 
         <p>Yet outside these few and necessary things, the tribes must be free. No tribe has the right to impose its will, its customs, or its theories of government upon another. One may keep kings, another councils. One may uphold the old faith, another may falter. One may hold to the traditions of its fathers, while another may choose otherwise. The political form, the public faith, the ordering of families and communities, even the very structure of governance, belong to the tribes alone.</p>
 
-        <p>The sin of modern America is not unity itself, but a false and violent unity which seeks to make all things the same. The United States is not a nation, but a machine, constructed by ideologues who mistook slogans for law and theory for life. Its constitution is not the fruit of a people, but the abstract design of Enlightenment minds who sought to replace hearth and home with the empty notions of liberty and equality. The result is not a nation, but a system.</p>
+        <h3>The False Foundation</h3>
 
-        <p>Organic nations suffer, war, struggle, and heal. They endure because they are real. Inorganic systems persist only so long as their machinery functions. Once the gears begin to fail, as they are failing now, the machine collapses into rust and dust. Yet the tribes, though scattered and confused, still live. Their life is rooted, while the empire that rules them is rootless.</p>
+        <p>The state, rightly ordered, is a mystical organism. It is more than contracts and laws. It is the visible body of an invisible order, the temporal reflection of a people’s faith, history, and destiny. The early settlers of America understood this. When they crossed the ocean and set their feet upon new soil, they did not imagine themselves simply building towns or crafting governments. They believed they were founding a New Israel. Their colonies were not mere administrative districts, but sacred communities, covenanted under God to walk in His ways.</p>
 
-        <p>The cure is not anarchy, nor conquest, but covenant. Twelve free nations, bound together not by ideology, but by kinship, necessity, and peace.</p>
+        <p>This vision was abandoned. The generation of the Founding Fathers rejected the mystical organism in favor of the mechanized state. Disciples of the Enlightenment, they looked not to Providence, but to reason; not to the Church, but to the marketplace. They saw the state not as a Christian covenant, but as a social contract, crafted by men for material ends. In their hands, the vision of a Christian commonwealth was cast aside and replaced with a republic dedicated to individualism, liberty, and property.</p>
+
+        <p>By severing the church from the state, they severed the soul from the body. A state without a faith is a body without breath. What began as a nominally Christian people would, in time, inevitably become an increasingly secular society. Once God was removed from the heart of the state, only economics remained. The tribes were reduced to provinces. The citizen became a consumer. The father became a taxpayer. The church became a private hobby.</p>
+
+        <p>Modern America is the logical conclusion of the Enlightenment project. It is no longer a nation, but an economic zone. Anyone can be an American, so long as they profess belief in the almighty dollar and the doctrines of liberalism. The language of rights, freedom, and equality mask the truth. America today is not one people, but a market of strangers ruled by money.</p>
+
+        <p>This is not unity. This is not covenant. This is not a nation. It is a machine, and like all machines, it will fail.</p>
 
     </main>
 
