Added False Foundation section to manifesto

--- a/manifesto.html
+++ b/manifesto.html
@@ -56,6 +56,18 @@
 
         <p>Yet outside these few and necessary things, the tribes must be free. No tribe has the right to impose its will, its customs, or its theories of government upon another. One may keep kings, another councils. One may uphold the old faith, another may falter. One may hold to the traditions of its fathers, while another may choose otherwise. The political form, the public faith, the ordering of families and communities, even the very structure of governance, belong to the tribes alone.</p>
 
+        <h3>The Covenant and the Path Forward</h3>
+
+        <p>The way forward is not to restore the Enlightenment republic, nor to seize its machinery for ourselves. The task is to build anew. The Twelve Nations must renew the ancient covenant, not as a contract, but as a sacred bond, rooted in kinship, land, and faith. We shall form a confederation of peoples who share the duties that belong to all, and guard jealously the autonomy of each.</p>
+
+        <p>The terms of unity are simple. The tribes shall cooperate where necessary, as their ancestors did. They shall maintain a common currency and honest measures. They shall defend their borders and their lands together. They shall care for shared rivers, roads, and ports, and safeguard commerce between the nations. But in all matters of law, faith, and custom, each tribe shall rule itself, guided by the traditions and ways handed down from its forefathers.</p>
+
+        <p>We will not waste ourselves struggling for control over the present order. We will instead build parallel networks, communities, and institutions, and gradually detach ourselves from the failed and crumbling structure of the United States. Our aim is not to overthrow, but to outlast. We will reduce our reliance upon the system until we no longer need it, and what remains of it can no longer claim us.</p>
+
+        <p>For those who would join this work, the question arises: where is my tribe? To which nation do I belong? The answer may be found either where you stand or where your roots lie. Some will belong to the land of their birth. Others may hear the call of their ancestors from a few generations past. Whether it is the place of your present dwelling or the memory of your forefathers, you shall know your tribe by the call it places upon your heart.</p>
+
+        <p>Let the covenant be renewed. Let the Twelve Nations rise. Let every tribe return to its own.</p>
+
     </main>
 
     <footer>
