Added False Foundation section to manifesto

--- a/manifesto.html
+++ b/manifesto.html
@@ -56,6 +56,8 @@
 
         <p>Yet outside these few and necessary things, the tribes must be free. No tribe has the right to impose its will, its customs, or its theories of government upon another. One may keep kings, another councils. One may uphold the old faith, another may falter. One may hold to the traditions of its fathers, while another may choose otherwise. The political form, the public faith, the ordering of families and communities, even the very structure of governance, belong to the tribes alone.</p>
 
+        <p>Such a confederation would not only preserve the freedom of the tribes, but would also foster a healthy and natural competition among them. Just as the city-states of northern Italy flourished during the Renaissance, so too would the tribes, each striving to outdo the others in virtue, beauty, and accomplishment. In the absence of imposed uniformity, diversity would give rise to excellence. Tribes would cultivate their own arts, customs, and institutions, and through this rivalry, all would be enriched. The confederation would not be weakened by its divisions, but strengthened by the vitality of its members.</p>
+
         <h3>The Covenant and the Path Forward</h3>
 
         <p>The way forward is not to restore the Enlightenment republic, nor to seize its machinery for ourselves. The task is to build anew. The Twelve Nations must renew the ancient covenant, not as a contract, but as a sacred bond, rooted in kinship, land, and faith. We shall form a confederation of peoples who share the duties that belong to all, and guard jealously the autonomy of each.</p>
