--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmericanTribes.org</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-  <header>
-    <img src="assets/images/tribes_logo.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
-    <h1>AmericanTribes.org</h1>
-    <p>A Confederation of the Twelve Nations</p>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="manifesto.html">Manifesto</a>
-        <a href="tribes.html">Tribes</a>
-    </nav>
-</header>
 
+<body>
+    <header>
+        <img src="assets/images/tribes_logo.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
+        <p>A New Vision for America</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="manifesto.html">Manifesto</a>
+            <a href="tribes.html">Tribes</a>
+        </nav>
+    </header>
 
     <main>
         <section>
@@ -26,8 +26,8 @@
         </section>
 
         <section>
-            <h2>What is AmericanTribes.org?</h2>
-            <p>We are a cultural confederation. Twelve peoples, twelve lands, one covenant.</p>
+            <h2>What is the Tribal Confederacy?</h2>
+            <p>We are a religio-political organization that seeks to reconstitute America as a confederation of Twelve sovereign nations, bound by the Christian faith and kinship.</p>
             <div style="text-align:center; margin-top:20px;">
                 <a href="manifesto.html" class="button">Read the Manifesto</a>
                 <a href="tribes.html" class="button">Explore the Tribes</a>
@@ -35,8 +35,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2025 AmericanTribes.org</p>
-    </footer>
 </body>
+
 </html>
