Updated tribes section with finalized Twelve Nations structure

--- a/tribes.html
+++ b/tribes.html
@@ -31,7 +31,7 @@
             <li><strong>Greater Texas</strong>: Texas, Oklahoma</li>
             <li><strong>The Great Plains</strong>: Nebraska, Kansas, North Dakota, South Dakota, Eastern Montana, Eastern Wyoming, Idaho</li>
             <li><strong>Deseret</strong>: Utah, Nevada, Arizona, New Mexico, Western Colorado, Eastern California (desert regions)</li>
-            <li><strong>California</strong>: Coastal and Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin)</li>
+            <li><strong>California</strong>: Coastal and Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin), Hawaii</li>
             <li><strong>The Northwest</strong>: Oregon, Washington, Western Montana</li>
             <li><strong>Alaska</strong>: Alaska</li>
         </ul>
