Global update: header, logo, and page consistency

--- a/tribes.html
+++ b/tribes.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-    <header>
-        <h1>AmericanTribes.org</h1>
-        <p>A Confederation of the Twelve Nations</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="manifesto.html">Manifesto</a>
-            <a href="tribes.html">Tribes</a>
-        </nav>
-    </header>
+  <header>
+    <img src="assets/images/tribes_logo_v2.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
+    <p>A New Vision for America</p>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="manifesto.html">Manifesto</a>
+        <a href="tribes.html">Tribes</a>
+    </nav>
+</header>
+
 
     <main>
         <h2>The Twelve Nations</h2>
