Global update: header, logo, and page consistency

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-      <img src="assets/images/tribes_logo_v2.png" alt="American Tribes Logo">
+      <img src="assets/images/tribes_logo_v2.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
         <p>A New Vision for America</p>
         <nav>
             <a href="index.html">Home</a>
