Global update: header, logo, and page consistency

--- a/tribes.html
+++ b/tribes.html
@@ -23,11 +23,11 @@
     <main>
         <h2>The Twelve Nations</h2>
         <ul>
-            <li><strong>New England</strong>: Maine, New Hampshire, Vermont, Massachusetts, Rhode Island, Connecticut</li>
+            <li><strong>New England</strong>: Maine, New Hampshire, Vermont, Massachusetts, Rhode Island, Connecticut, parts of Upstate New York</li>
             <li><strong>Greater New York City</strong>: New York City metro, Long Island, New Jersey, Delaware, Maryland, Philadelphia</li>
-            <li><strong>Great Lakes</strong>: Western Pennsylvania, Ohio, Indiana, Illinois, Michigan, Wisconsin, Minnesota, Northern Missouri (except Kansas City and St. Louis), Iowa</li>
+            <li><strong>Great Lakes</strong>: parts of Upstate New York, Western Pennsylvania, Ohio, Indiana, Illinois, Michigan, Wisconsin, Minnesota, Northern Missouri, Iowa</li>
             <li><strong>Appalachia</strong>: West Virginia, Eastern Kentucky, Eastern Tennessee, Western Virginia</li>
-            <li><strong>Dixieland</strong>: Virginia, North Carolina, South Carolina, Georgia, Alabama, Mississippi, Louisiana, Arkansas, Tennessee (west), Kentucky (west), Southern Missouri, Florida Panhandle, Northern Florida, Kansas City, St. Louis</li>
+            <li><strong>Dixieland</strong>: Virginia, North Carolina, South Carolina, Georgia, Alabama, Mississippi, Louisiana, Arkansas, Tennessee (west), Kentucky (west), Southern Missouri (including St. Louis and Kansas City), Northern Florida</li>
             <li><strong>South Florida</strong>: Florida south of the Orlando-Tampa line</li>
             <li><strong>Greater Texas</strong>: Texas, Oklahoma</li>
             <li><strong>The Great Plains</strong>: Nebraska, Kansas, North Dakota, South Dakota, Eastern Montana, Eastern Wyoming, Idaho</li>
