Global update: header, logo, and page consistency

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <img src="assets/images/map-placeholder.png" alt="Map of the Twelve Tribes" style="width:100%; max-width:600px; display:block; margin: 0 auto;">
-            <p style="text-align:center; margin-top:10px;">The United States is not one nation. It is twelve.</p>
+            <p style="text-align:center; margin-top:10px;">Note - these are rough approximations.  Tribal groups and boundaries are open to discussion.</p>
         </section>
 
         <section>
