--- a/tribes.html
+++ b/tribes.html
@@ -33,15 +33,15 @@
             <li><strong>California</strong>: Coastal and Central California (Bay Area, Sacramento Valley, Central Valley, Los Angeles Basin), Hawaii</li>
             <li><strong>The Northwest</strong>: Oregon, Washington, Northern California</li>
             <li><strong>Alaska</strong>: Alaska</li>
-            <li><strong>The 12th Tribe</strong>: A supra-tribal order composed of representatives from the Twelve Nations. It exists to safeguard the covenant, oversee matters of defense, trade, diplomacy, and common law. It serves as the bond of unity, not as a ruler.</li>
+            <li><strong>The 12th Tribe</strong>: A supra-tribal order composed of representatives from the Twelve Nations. It exists to safeguard the covenant, oversee matters of defense, trade, diplomacy, and common law.</li>
         </ul>
         <p> The organization of tribes is by no means set in stone and are open to further ideas and discussion.</p>
 
         <h3>How to Join or Form a Tribe</h3>
 
-<p>The Confederacy is still young. At present, only Dixieland is open to new members and is in the process of forming its first circles. More information will be provided soon on how to formally join your tribe or how to gather and organize a new one where none exists.</p>
+<p>The Confederacy is still young. More information will be provided soon on how to formally join your tribe or how to gather and organize a new one where none exists.</p>
 
-<p>Those who belong to other nations should begin to reflect, study, and prepare. In time, each tribe will be given the tools to organize, meet, and renew the covenant within their own lands.</p>
+<p>Those who belong to nations should begin to reflect, study, and prepare. In time, each tribe will be given the tools to organize, meet, and renew the covenant within their own lands.</p>
 
 <p>For now, the call is simple: remember who you are, remember where you belong, and be ready.</p>
 
