Add interactive map and glow effect

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-      <img src="assets/images/tribes_logo_v2.png" alt="American Tribes Logo" style="height:80px; margin-bottom:10px;">
+        <img src="assets/images/tribal-map.png" alt="Tribal Map" style="height:80px; margin-bottom:10px;">
         <p>A New Vision for America</p>
         <nav>
             <a href="index.html">Home</a>
@@ -20,9 +20,23 @@
     </header>
 
     <main>
-        <section>
-            <img src="assets/images/map-placeholder.png" alt="Map of the Twelve Tribes" style="width:100%; max-width:600px; display:block; margin: 0 auto;">
-            <p style="text-align:center; margin-top:10px;">Note - this image does not accurately reflect our proposed divisions.  Please see the Tribes page for a breakdown.</p>
+        <section class="map-section">
+            <div class="tribal-map-container">
+                <img src="assets/images/tribal-map.png" alt="Tribal Map" class="tribal-map">
+
+                <!-- Example Hotspots -->
+                <a href="greatlakes.html" class="map-link" style="top: 36%; left: 55%;">Great Lakes</a>
+                <a href="newengland.html" class="map-link" style="top: 18%; left: 80%;">New England</a>
+                <a href="greatplains.html" class="map-link" style="top: 33%; left: 42%;">Great Plains</a>
+                <a href="newyork.html" class="map-link" style="top: 24%; left: 74%;">New York</a>
+                <a href="deseret.html" class="map-link" style="top: 53%; left: 32%;">Deseret</a>
+                <a href="northwest.html" class="map-link" style="top: 24%; left: 16%;">Northwest</a>
+                <a href="florida.html" class="map-link" style="top: 72%; left: 78%;">Florida</a>
+                <a href="confederacy.html" class="map-link" style="top: 80%; left: 50%;">12th Tribe</a>
+                <!-- Add more links for each tribe -->
+
+            </div>
+            <p style="text-align:center; margin-top:10px;">Click on any shield to learn about the tribe.</p>
         </section>
 
         <section>
