Fix typo in image filename

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
-        <img src="assets/images/tribal-map.png" alt="Tribal Map" style="height:80px; margin-bottom:10px;">
-        <p>A New Vision for America</p>
+      <img src="assets/images/tribes_logo_v2.png" alt="Tribal Confederacy Logo" style="height:80px; margin-bottom:10px;">
+      <p>A New Vision for America</p>
         <nav>
             <a href="index.html">Home</a>
             <a href="manifesto.html">Manifesto</a>
