--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <img src="assets/images/tribal-map.png" alt="Tribal Map" class="tribal-map">
 
                 <!-- Example Hotspots -->
-                <a href="greatlakes.html" class="map-link" style="top: 36%; left: 55%;">Great Lakes</a>
-                <a href="newengland.html" class="map-link" style="top: 18%; left: 80%;">New England</a>
-                <a href="greatplains.html" class="map-link" style="top: 33%; left: 42%;">Great Plains</a>
-                <a href="newyork.html" class="map-link" style="top: 24%; left: 74%;">New York</a>
-                <a href="deseret.html" class="map-link" style="top: 53%; left: 32%;">Deseret</a>
-                <a href="northwest.html" class="map-link" style="top: 24%; left: 16%;">Northwest</a>
-                <a href="florida.html" class="map-link" style="top: 72%; left: 78%;">Florida</a>
-                <a href="confederacy.html" class="map-link" style="top: 80%; left: 50%;">12th Tribe</a>
+                <a href="greatlakes.html" class="map-link" style="top: 32%; left: 62%;">Great Lakes</a>
+                <a href="newengland.html" class="map-link" style="top: 22%; left: 90%;">New England</a>
+                <a href="greatplains.html" class="map-link" style="top: 21%; left: 43%;">Great Plains</a>
+                <a href="newyork.html" class="map-link" style="top: 39%; left: 89%;">New York</a>
+                <a href="deseret.html" class="map-link" style="top: 40%; left: 27%;">Deseret</a>
+                <a href="northwest.html" class="map-link" style="top: 14%; left: 16%;">Northwest</a>
+                <a href="florida.html" class="map-link" style="top: 83%; left: 76%;">Florida</a>
+                <a href="twelfth.html" class="map-link" style="top: 84%; left: 63%;">12th Tribe</a>
                 <!-- Add more links for each tribe -->
 
             </div>
