interactive map attempt 4

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                 <a href="northwest.html" class="map-link" style="top: 14%; left: 16%;">Northwest</a>
                 <a href="florida.html" class="map-link" style="top: 83%; left: 76%;">Florida</a>
                 <a href="twelfth.html" class="map-link" style="top: 84%; left: 63%;">12th Tribe</a>
+                <a href="texas.html" class="map-link" style="top: 59%; left: 47%;">Greater Texas</a>
+                <a href="california.html" class="map-link" style="top: 50%; left: 13%;">California</a>
+                <a href="dixieland.html" class="map-link" style="top: 55%; left: 72%;">Dixieland</a>
+                <a href="alaska.html" class="map-link" style="top: 77%; left: 8%;">Alaska</a>
                 <!-- Add more links for each tribe -->
 
             </div>
