interactive map attempt 17

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </main>
 
     <!-- Modal -->
-    <div id="tribe-popup" class="popup hidden">
+    <div id="tribe-popup" class="popup">
         <div class="popup-content">
             <span class="popup-close">&times;</span>
             <div id="popup-text"></div>
