--- a/manifesto.html
+++ b/manifesto.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manifesto | AmericanTribes.org</title>
     <link rel="stylesheet" href="styles/style.css">
+
+      <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z4LG6R6QX4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-Z4LG6R6QX4');
+  </script>
 </head>
 
 <body>
