--- a/manifesto.html
+++ b/manifesto.html
@@ -7,14 +7,8 @@
     <title>Manifesto | AmericanTribes.org</title>
     <link rel="stylesheet" href="styles/style.css">
 
-      <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z4LG6R6QX4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-Z4LG6R6QX4');
-  </script>
+    <script src="scripts/analytics.js"></script>
+
 </head>
 
 <body>
