Added pulsing glow effect to tribal borders

--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 
 </head>
 
+<div id="borders-container">
+  <img src="assets/borders/new-england-border.png" id="new-england-border" class="border-overlay">
+  <img src="assets/borders/new-york-border.png" id="new-york-border" class="border-overlay">
+  <img src="assets/borders/great-lakes-border.png" id="great-lakes-border" class="border-overlay">
+  <img src="assets/borders/dixieland-border.png" id="dixieland-border" class="border-overlay">
+  <img src="assets/borders/florida-border.png" id="florida-border" class="border-overlay">
+  <img src="assets/borders/texas-border.png" id="texas-border" class="border-overlay">
+  <img src="assets/borders/great-plains-border.png" id="great-plains-border" class="border-overlay">
+  <img src="assets/borders/deseret-border.png" id="deseret-border" class="border-overlay">
+  <img src="assets/borders/northwest-border.png" id="northwest-border" class="border-overlay">
+  <img src="assets/borders/california-border.png" id="california-border" class="border-overlay">
+  <img src="assets/borders/alaska-border.png" id="alaska-border" class="border-overlay">
+</div>
+
+
 <body>
   <header>
     <img src="assets/images/tribes_logo_v2.png" alt="Tribal Confederacy Logo" style="height:80px; margin-bottom:10px;">
